main.tf
variable "aws_access_key_id" {}
variable "aws_secret_access_key" {}
variable "image_uri" {}

variable "availability_zones" {
  default = ["eu-central-1a", "eu-central-1b"]
}

provider "aws" {
  region     = "eu-central-1"
  access_key = var.aws_access_key_id
  secret_key = var.aws_secret_access_key
}

# Create a VPC
resource "aws_vpc" "funda_vpc" {
  cidr_block          = "10.0.0.0/16"
  enable_dns_support  = true
  enable_dns_hostnames = true
}

# Create public and private subnets in eu-central-1a and eu-central-1b
resource "aws_subnet" "public_subnet" {
  count                   = 2
  vpc_id                  = aws_vpc.funda_vpc.id
  cidr_block              = element(["10.0.1.0/24", "10.0.2.0/24"], count.index)
  availability_zone       = element(var.availability_zones, count.index)
  map_public_ip_on_launch = true
}

resource "aws_subnet" "private_subnet" {
  count                   = 2
  vpc_id                  = aws_vpc.funda_vpc.id
  cidr_block              = element(["10.0.3.0/24", "10.0.4.0/24"], count.index)
  availability_zone       = element(var.availability_zones, count.index)
}

# Create an internet gateway for the public subnet
resource "aws_internet_gateway" "funda_igw" {
  vpc_id = aws_vpc.funda_vpc.id
}

# Create a route table for the public subnet
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.funda_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.funda_igw.id
  }
}

# Associate the public route table with the public subnet
resource "aws_route_table_association" "public_route_association" {
  subnet_id      = aws_subnet.public_subnet[0].id
  route_table_id = aws_route_table.public_route_table.id
}

# Create a security group for ECS tasks
resource "aws_security_group" "ecs_task_sg" {
  vpc_id = aws_vpc.funda_vpc.id
  name   = "ecs-task-sg"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Create an ECS cluster
resource "aws_ecs_cluster" "funda_cluster" {
  name = "FundaGold_Cluster"
}

# Create an ECR repository for storing Docker images
resource "aws_ecr_repository" "funda_ecr_repo" {
  name = "fundagold_public_repository"
}

# Create an IAM role for ECS task execution
resource "aws_iam_role" "ecs_task_execution_role" {
  name = "ecs-task-execution-role"

  assume_role_policy = jsonencode({
    Version   = "2012-10-17",
    Statement = [{
      Action    = "sts:AssumeRole",
      Effect    = "Allow",
      Principal = {
        Service = "ecs-tasks.amazonaws.com"
      }
    }]
  })
}

# Attach the AmazonECSTaskExecutionRolePolicy to the ECS task execution role
resource "aws_iam_role_policy_attachment" "ecs_task_execution_policy_attachment" {
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
  role       = aws_iam_role.ecs_task_execution_role.name
}

# Create an ECS task definition
resource "aws_ecs_task_definition" "funda_task_definition" {
  family                   = "FundaGold-TaskDefinition-Public"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  container_definitions = jsonencode([
    {
      "name": "FundaGold-Container-Public",
      "image": var.image_uri,
      "cpu": 256,
      "memory": 512,
      "essential": true,
      "portMappings": [
        {
          "containerPort": 80,
          "hostPort": 80
        }
      ],
      "logConfiguration": {
        "logDriver": "awslogs",
        "options": {
          "awslogs-group": "/ecs/FundaGold-TaskDefinition-Public",
          "awslogs-region": "eu-central-1",
          "awslogs-stream-prefix": "ecs"
        }
      }
    }
  ])
}

# Create an ECS service to run tasks
resource "aws_ecs_service" "funda_ecs_service" {
  name            = "FundaGold-Service-Public"
  cluster         = aws_ecs_cluster.funda_cluster.id
  task_definition = aws_ecs_task_definition.funda_task_definition.arn
  launch_type     = "FARGATE"
  desired_count   = 1

  network_configuration {
    subnets         = [aws_subnet.public_subnet[0].id]
    security_groups = [aws_security_group.ecs_task_sg.id]
  }
}
